--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "lecon-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "dev": "node -r dotenv/config --watch server.js",
+    "start": "node -r dotenv/config server.js",
+    "devGo": "nodemon -r dotenv/config server.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
