--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "emoji-mart": "^5.5.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "js-cookie": "^3.0.5",
@@ -21,6 +26,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-mentions": "^4.4.9",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
