--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "emoji-mart": "^5.5.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "i": "^0.3.7",
     "js-cookie": "^3.0.5",
     "next": "13.4.4",
+    "npm": "^9.7.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
