--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-mentions": "^4.4.9",
+    "react-modal": "^3.16.1",
     "react-notifications-component": "^4.0.1",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
