--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react-modal": "^3.16.1",
     "react-notifications-component": "^4.0.1",
     "react-toastify": "^9.1.3",
+    "reapop": "^4.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
