--- a/client/package.json
+++ b/client/package.json
@@ -31,12 +31,15 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
+    "react-local-toast": "^1.2.2",
     "react-mentions": "^4.4.9",
     "react-modal": "^3.16.1",
     "react-notifications-component": "^4.0.1",
     "react-toastify": "^9.1.3",
     "reapop": "^4.2.1",
     "tailwindcss": "3.3.2",
+    "tailwindcss-transforms": "^2.2.0",
+    "tailwindcss-transitions": "^2.2.0",
     "typescript": "5.1.3"
   },
   "devDependencies": {
